# art-director

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: briefs.jsonl  results.json  results.md  run_eval.py
gallery/: corporate_trust.html  dev_minimal.html  eco_friendly.html  editorial_modern.html  fintech_calm.html  gaming_energetic.html  index.html  kids_playful.html  luxury_jewelry.html  luxury_minimal.html  record_brutalist.html  saas_clean.html  wellness_organic.html
scripts/: build_gallery.py  shoot_gallery.py
src/art_director/: __init__.py  brief.py  cli.py  color.py  identity.py  loop.py  render.py  typography.py
src/art_director/critics/: __init__.py  accessibility.py  base.py  brief_fit.py  harmony.py  typography_critic.py
tests/: test_brief.py  test_color.py  test_loop.py  test_render.py
